...
                                        <fontDescription key="fontDescription" name="Regular-Bold" family="Regular" pointSize="16"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Make a payment">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <fontDescription key="fontDescription" name="Regular-Bold" family="Regular" pointSize="18"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Okay">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nHW-zw-uMf" userLabel="CloseButton">
                                        <rect key="frame" x="167.5" y="10" width="40" height="40"/>
                                        <accessibility key="accessibilityConfiguration" identifier="CrossBtnMakePayment"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="OYN-af-5y9"/>
...
                                            <fontDescription key="fontDescription" name="Regular-Bold" family="Regular" pointSize="18"/>
                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                            <state key="normal" title="Add payment method">
                                                <color key="titleColor" red="0.1529411765" green="0.37647058820000001" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </state>
...
                                                <color key="tintColor" systemColor="tintColor"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Continue"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
...
                                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Cancel">
                                                    <color key="titleColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
...
                                        <fontDescription key="fontDescription" name="Regular-SemiBold" family="Regular" pointSize="18"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Use a different payment method">
                                            <color key="titleColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Credit or debit card" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJJ-eJ-xiF">
                                        <rect key="frame" x="68" y="30" width="165.5" height="20"/>
                                        <fontDescription key="fontDescription" name="Regular-Medium" family="Regular" pointSize="20"/>
...
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Checking account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Xt-It-oaB">
                                        <rect key="frame" x="68" y="30" width="154" height="20"/>
                                        <fontDescription key="fontDescription" name="Regular-Medium" family="Regular" pointSize="20"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sorry, this payment failed" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g75-uh-lbx">
                                <rect key="frame" x="20" y="150" width="335" height="28"/>
                                <fontDescription key="fontDescription" name="Regular-Bold" family="Regular" pointSize="28"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Be-ht-5l2">
                                        <rect key="frame" x="167.5" y="10" width="40" height="40"/>
                                        <accessibility key="accessibilityConfiguration" identifier="failureVCCloseBtn"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="40" id="grk-rI-CRC"/>
...
