...
        assignIdsToEditBtn(btn: cell.editBtn) //For unit test cases
        return cell
    }
    func assignIdsToEditBtn(btn: UIButton) {
        switch btn.tag {
        case 0:
            btn.accessibilityIdentifier = "editAmountBtn"
        case 1:
            btn.accessibilityIdentifier = "editDateBtn"
        case 2:
            btn.accessibilityIdentifier = "editMOPBtn"
        default:
            btn.accessibilityIdentifier = "editMOPBtn"
        }
    }
    
   private func setTruncatedPayMethodName(cell : MakePaymentTableViewCell){
...
        let updatedAmount = Double(self.paymentAmount)
        return QuickPayManager.shared.getCurrentAmount() == String(format: "%.2f", updatedAmount ?? 0)
    }
    
    // Set the button title according to the selected date (Today or Future date)
    func updatePayNowButtonTitle() {
        buttonPayNow.accessibilityIdentifier = "PayNowBtn"
        if self.getPaymentDueDate() == "Today" {
            self.buttonPayNow.setTitle("Pay now", for: .normal)
        } else {
            self.buttonPayNow.setTitle("Schedule payment", for: .normal)
        }
    }
...
