...
        let text = "I have read and agree to the Pay Bill Terms and Conditions"
        let linkText = NSMutableAttributedString(string: text, attributes: [.font: UIFont(name: "Regular-Bold", size: 18)!])
        let moreInfo = (text as NSString).range(of: tappableText)
        linkText.addAttribute(.foregroundColor, value: UIColor(red: 39/255, green: 96/255, blue: 240/255, alpha: 1.0), range: moreInfo)
        tappableLabel.attributedText = linkText
        saveToAccount.isSelected = true
        saveToAccount.accessibilityIdentifier = "saveCardMOP"
        acceptTerms.accessibilityIdentifier = "cardTnC"
        sameBillingAddress.isSelected = false
        errorTerms.isHidden = true
        tappableLabel.setLineHeight(1.2)
        sameAddressLabel.setLineHeight(1.2)
        errorTerms.setLineHeight(1.4)
        //CMAIOS-2528
...
                self.shadowView.layer.shadowOpacity = 0
            }
        }
    } */
    
    private func uISetupForFlowType() {
        buttonPayNow.accessibilityIdentifier = "payNowCardAction"
        buttonPayNow.setTitle("Save", for: .normal)
        switch flow {
        case .noPayments:
            buttonPayNow.setTitle("Continue", for: .normal)
            saveAccountButtonStack.isHidden = false
            updateGoogleAnalytics(defaultSave: true)
...
